Start of coding for submissions re. multi-segmented models.

--- a/code/modeling_ii.ipynb
+++ b/code/modeling_ii.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "3ed3978d",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "a80f47c4",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,7 @@
        "4        0.1975      9      1      0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "f82d550f",
    "metadata": {},
    "outputs": [
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "6b8d1e23",
    "metadata": {},
    "outputs": [
@@ -657,7 +657,7 @@
        "4         0.0670        0.1050      1      0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "5181343f",
    "metadata": {},
    "outputs": [
@@ -802,7 +802,7 @@
        "4      -2.703063     -2.253795      1      0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -986,7 +986,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a65fb294",
+   "id": "3b18416b",
    "metadata": {},
    "source": [
     "## A Final Idea to Try\n",
@@ -1001,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6b82ba03",
+   "id": "4980ec16",
    "metadata": {},
    "outputs": [
     {
@@ -1024,8 +1024,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "id": "3d1b75db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    90609.000000\n",
+       "mean         2.221345\n",
+       "std          0.319313\n",
+       "min          0.000000\n",
+       "25%          2.079442\n",
+       "50%          2.197225\n",
+       "75%          2.397895\n",
+       "max          3.367296\n",
+       "Name: rings, dtype: float64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_log['rings'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
-   "id": "4628f9f7",
+   "id": "5e90f44f",
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1083,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "36ad309c",
+   "id": "f41167b6",
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1112,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b61002d2",
+   "id": "0814da8d",
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1141,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ac37db63",
+   "id": "42763cf8",
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1170,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "8bd60c6a",
+   "id": "3597e072",
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1191,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "2f859965",
+   "id": "a860a21a",
    "metadata": {},
    "outputs": [
     {
@@ -1183,7 +1212,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "8c303bdc",
+   "id": "2dfc0173",
    "metadata": {},
    "outputs": [
     {
@@ -1204,7 +1233,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "32534016",
+   "id": "d994ffd2",
    "metadata": {},
    "outputs": [
     {
@@ -1225,7 +1254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3d47d15",
+   "id": "1c001f9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1236,7 +1265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d359489",
+   "id": "b62fb10f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1245,8 +1274,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "db6d10f9",
+   "execution_count": 16,
+   "id": "e2ab5b4c",
    "metadata": {},
    "outputs": [
     {
@@ -1275,8 +1304,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "deaee0fe",
+   "execution_count": 17,
+   "id": "3fd8d8de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1296,8 +1325,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "fff614ac",
+   "execution_count": 18,
+   "id": "4188f186",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1307,7 +1336,6 @@
     "    \n",
     "    parts_df[i][2],  parts_df[i][3], parts_df[i][4], parts_df[i][5] = train_test_split(parts_df[i][0], parts_df[i][1],\n",
     "                                                                                      test_size=.2, random_state=26)\n",
-    "    \n",
     "    mms = MinMaxScaler()\n",
     "    parts_df[i][2] = mms.fit_transform(parts_df[i][2])\n",
     "    parts_df[i][3] = mms.transform(parts_df[i][3])"
@@ -1315,8 +1343,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "cb34e49d",
+   "execution_count": 19,
+   "id": "e5d44d95",
    "metadata": {},
    "outputs": [
     {
@@ -1375,36 +1403,210 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9e4b076",
+   "id": "eaf03108",
    "metadata": {},
    "source": [
-    "Unsurprising that the R^2 is so poor on the first few as their size is so small that the model had an incredibly hard time predicting them.\n",
+    "Unsurprising that the R^2 is so poor on the first few as their size is so small that the model had an incredibly hard time predicting them.Note that for part 0 and 1 we might as well just use the median age, given their r2 is less than 0.\n",
     "\n",
     "So, effectively we probably totally ostrocized the 'outliers', but perhaps we'll make that up with the rest.\n",
     "\n",
-    "So, let us continue with a similar procedure to above for the test/validation data:"
+    "To clarify our progress: As shown below, we're now a lot more accurate re rmsle for over 78% of the model. Previously it was .054; now we have, rounding up, a .052 rmsle! However, with 22% being less accurate... Furthermore, even on the parts that faired better with rmsle the best r2 we got (train) was a meager .48 - compared to the .72 we previously had...\n",
+    "\n",
+    "Regardless, let us continue with a similar procedure to above for the test/validation data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "4e31422d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7835866194307409"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_log[df_log['whole_weight'].between(-1, float('inf'))].shape[0]/df_log.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a59b942",
+   "metadata": {},
+   "source": [
+    "Finally onto the validation!\n",
+    "\n",
+    "Recall that the median logged rings are: <br>\n",
+    "\n",
+    "2.197225"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "5c9acffd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "So, for the record, we'll be dealing with 6 models.\n"
+     ]
+    }
+   ],
+   "source": [
+    "borders = [float('-inf'), -4, -3, -2, -1, 0, float('inf')]\n",
+    "modeling_feature_focus = 'whole_weight'\n",
+    "names_df_val = []\n",
+    "\n",
+    "for i in range(len(borders)-1):\n",
+    "    names_df_val.append(f\"df_log_part_{i}_val\") #I think I'll need to do this in two parts\n",
+    "\n",
+    "print(f\"So, for the record, we'll be dealing with {len(names_df_val)} models.\")\n",
+    "    \n",
+    "for i in range(len(names_df_val)):\n",
+    "    names_df_val[i] = df_log_val[df_log_val[modeling_feature_focus].between(borders[i],borders[i+1])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "ec58d5e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Arguably overkill; no noob, we need it regardless as we're still declaring\n",
+    "#n number of x vals; fine, but this first loop isn't needed; eh...\n",
+    "parts_df_val = []\n",
+    "for i in range(len(names_df_val)):\n",
+    "    parts_df_val.append([])\n",
+    "\n",
+    "for i in range(len(names_df_val)): #No need for train/test split nor ys...\n",
+    "    parts_df_val[i].append(f\"X_{i}_val\")\n",
+    "    #Then we'll re-use pthe earlier X_trains: parts_df[i][2,3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "d1406d8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(parts_df_val)):#\n",
+    "    parts_df_val[i][0] = names_df_val[i].drop('id', axis=1)\n",
+    "    \n",
+    "    parts_df_val[i][0] = mms.transform(parts_df_val[i][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "63e43a4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Found array with dim 3. RandomForestRegressor expected <= 2.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[37], line 17\u001b[0m\n\u001b[0;32m     15\u001b[0m models_df_val[i][\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(names_df_val[i][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m i \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m noobs:\n\u001b[1;32m---> 17\u001b[0m     models_df_val[i][\u001b[38;5;241m0\u001b[39m][submission_column_title] \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mexp(models_df[i][\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mpredict(parts_df_val[i]))\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     19\u001b[0m     models_df_val[i][\u001b[38;5;241m0\u001b[39m][submission_column_title] \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mexp(filler_value_for_outliers)\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\sklearn\\ensemble\\_forest.py:1064\u001b[0m, in \u001b[0;36mForestRegressor.predict\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m   1062\u001b[0m check_is_fitted(\u001b[38;5;28mself\u001b[39m)\n\u001b[0;32m   1063\u001b[0m \u001b[38;5;66;03m# Check data\u001b[39;00m\n\u001b[1;32m-> 1064\u001b[0m X \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_validate_X_predict(X)\n\u001b[0;32m   1066\u001b[0m \u001b[38;5;66;03m# Assign chunk of trees to jobs\u001b[39;00m\n\u001b[0;32m   1067\u001b[0m n_jobs, _, _ \u001b[38;5;241m=\u001b[39m _partition_estimators(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mn_estimators, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mn_jobs)\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\sklearn\\ensemble\\_forest.py:641\u001b[0m, in \u001b[0;36mBaseForest._validate_X_predict\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m    638\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    639\u001b[0m     force_all_finite \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m--> 641\u001b[0m X \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_validate_data(\n\u001b[0;32m    642\u001b[0m     X,\n\u001b[0;32m    643\u001b[0m     dtype\u001b[38;5;241m=\u001b[39mDTYPE,\n\u001b[0;32m    644\u001b[0m     accept_sparse\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcsr\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    645\u001b[0m     reset\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[0;32m    646\u001b[0m     force_all_finite\u001b[38;5;241m=\u001b[39mforce_all_finite,\n\u001b[0;32m    647\u001b[0m )\n\u001b[0;32m    648\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m issparse(X) \u001b[38;5;129;01mand\u001b[39;00m (X\u001b[38;5;241m.\u001b[39mindices\u001b[38;5;241m.\u001b[39mdtype \u001b[38;5;241m!=\u001b[39m np\u001b[38;5;241m.\u001b[39mintc \u001b[38;5;129;01mor\u001b[39;00m X\u001b[38;5;241m.\u001b[39mindptr\u001b[38;5;241m.\u001b[39mdtype \u001b[38;5;241m!=\u001b[39m np\u001b[38;5;241m.\u001b[39mintc):\n\u001b[0;32m    649\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo support for np.int64 index based sparse matrices\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\sklearn\\base.py:633\u001b[0m, in \u001b[0;36mBaseEstimator._validate_data\u001b[1;34m(self, X, y, reset, validate_separately, cast_to_ndarray, **check_params)\u001b[0m\n\u001b[0;32m    631\u001b[0m         out \u001b[38;5;241m=\u001b[39m X, y\n\u001b[0;32m    632\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m no_val_X \u001b[38;5;129;01mand\u001b[39;00m no_val_y:\n\u001b[1;32m--> 633\u001b[0m     out \u001b[38;5;241m=\u001b[39m check_array(X, input_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mX\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mcheck_params)\n\u001b[0;32m    634\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m no_val_X \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m no_val_y:\n\u001b[0;32m    635\u001b[0m     out \u001b[38;5;241m=\u001b[39m _check_y(y, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mcheck_params)\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\sklearn\\utils\\validation.py:997\u001b[0m, in \u001b[0;36mcheck_array\u001b[1;34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, estimator, input_name)\u001b[0m\n\u001b[0;32m    992\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    993\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdtype=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnumeric\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m is not compatible with arrays of bytes/strings.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    994\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mConvert your data to numeric values explicitly instead.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    995\u001b[0m     )\n\u001b[0;32m    996\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m allow_nd \u001b[38;5;129;01mand\u001b[39;00m array\u001b[38;5;241m.\u001b[39mndim \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m3\u001b[39m:\n\u001b[1;32m--> 997\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    998\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFound array with dim \u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m. \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m expected <= 2.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    999\u001b[0m         \u001b[38;5;241m%\u001b[39m (array\u001b[38;5;241m.\u001b[39mndim, estimator_name)\n\u001b[0;32m   1000\u001b[0m     )\n\u001b[0;32m   1002\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m force_all_finite:\n\u001b[0;32m   1003\u001b[0m     _assert_all_finite(\n\u001b[0;32m   1004\u001b[0m         array,\n\u001b[0;32m   1005\u001b[0m         input_name\u001b[38;5;241m=\u001b[39minput_name,\n\u001b[0;32m   1006\u001b[0m         estimator_name\u001b[38;5;241m=\u001b[39mestimator_name,\n\u001b[0;32m   1007\u001b[0m         allow_nan\u001b[38;5;241m=\u001b[39mforce_all_finite \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mallow-nan\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m   1008\u001b[0m     )\n",
+      "\u001b[1;31mValueError\u001b[0m: Found array with dim 3. RandomForestRegressor expected <= 2."
+     ]
+    }
+   ],
+   "source": [
+    "#I'll jump ahead to Random Forests:\n",
+    "\n",
+    "submission_column_title = \"Rings\"\n",
+    "filler_value_for_outliers = 2.197225 #See abovee\n",
+    "noobs = [0, 1]\n",
+    "\n",
+    "models_df_val = []\n",
+    "for i in range(len(names_df_val)):#See above.\n",
+    "    models_df_val.append([])\n",
+    "for i in range(len(names_df_val)):\n",
+    "    models_df_val[i].append(f\"preds_part_{i}_val\")\n",
+    "\n",
+    "#Names are prepared,so now let's do it\n",
+    "for i in range(len(models_df_val)):\n",
+    "    models_df_val[i][0] = pd.DataFrame(names_df_val[i]['id'])\n",
+    "    if i not in noobs:\n",
+    "        models_df_val[i][0][submission_column_title] = np.exp(models_df[i][0].predict(parts_df_val[i]))\n",
+    "    else:\n",
+    "        models_df_val[i][0][submission_column_title] = np.exp(filler_value_for_outliers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "ff8ff208",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "noobs = [0, 1]\n",
+    "models_df_val = [0,1,2,3]\n",
+    "for i in range(len(models_df_val)):\n",
+    "    if i not in noobs:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "bcd99bad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.44492153, 1.38701244, 1.43123621, 1.41132906, 1.38771594,\n",
+       "       1.32577147, 1.30498834, 1.40080927, 1.17552812, 1.30851055,\n",
+       "       1.38996665, 1.39851972, 1.42755397, 1.51329389, 1.34631415,\n",
+       "       1.4462817 , 1.36980634, 1.3170829 , 1.40352632, 1.36787018,\n",
+       "       1.45817925, 1.42164554, 1.34732422, 1.41848641, 1.36128881,\n",
+       "       1.42677005, 1.3953589 , 1.44225761, 1.46935438, 1.36695209,\n",
+       "       1.33472778, 1.31409314, 1.38548121, 1.477091  , 1.37368194,\n",
+       "       1.3547413 , 1.39346958, 1.50873434, 1.32840784, 1.40299387,\n",
+       "       1.32034368, 1.34244184, 1.20053696, 1.4005107 ])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "models_df[0][1]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb9086a2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f3805b5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5063f826",
+   "id": "0b8196c3",
    "metadata": {},
    "outputs": [],
    "source": []
